# mattermost-test-custom-dialog-bot

./: Dockerfile  app.py  bot.py  config.py  dialogs.py  docker-compose.yaml  plugin.py  pyproject.toml  utils.py
