[project]
name = "mattermost-test-custom-dialog-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "mm-tools",
    "mmpy-bot",
    "requests>=2.32.4",
    "sentry-sdk>=2.35.0",
]

[tool.uv.sources]
mm-tools = { git = "https://github.com/Sadisms/mm-tools.git", rev = "feature/custom-dialogs" }
mmpy-bot = { git = "https://github.com/Sadisms/mmpy_bot.git", rev = "feature/custom-dialogs" }
